jpg moved to project, basic contact

--- a/contact-me.html
+++ b/contact-me.html
@@ -17,5 +17,14 @@
       <li><a href=contact-me.html>Contact Me</a><li>
     </ul>
     <hr id="home-hr-line">
-
+    <div class=cont-content>
+      <h1>Contact Me!</h1>
+      <a href="mailto:r_gregory1315@berkeley.edu">Email</a><br><br>
+      <strong id="subj-head">Profiles: </strong><br>
+      <a href="" target="_blank">Linkedin</a>
+      <a href="" target="_blank">Github</a>
+      <a href="" target="_blank">AngelList</a>
+      <a href="" target="_blank">Kaggle</a>
+    </div>
   </body>
+  
