added links to contact-me

--- a/contact-me.html
+++ b/contact-me.html
@@ -21,10 +21,10 @@
       <h1>Contact Me!</h1>
       <a href="mailto:r_gregory1315@berkeley.edu">Email</a><br><br>
       <strong id="subj-head">Profiles: </strong><br>
-      <a href="" target="_blank">Linkedin</a>
-      <a href="" target="_blank">Github</a>
-      <a href="" target="_blank">AngelList</a>
-      <a href="" target="_blank">Kaggle</a>
+      <a href="https://linkedin.com/in/rakechill" target="_blank">Linkedin</a>
+      <a href="https://github.com/rakechill" target="_blank">Github</a>
+      <a href="https://angel.co/rachel-gregory-1?public_profile=1" target="_blank">AngelList</a>
+      <a href="https://www.kaggle.com/rakechill" target="_blank">Kaggle</a>
     </div>
   </body>
   
