links open in new tab

--- a/experience.html
+++ b/experience.html
@@ -21,14 +21,14 @@
       <h1>Experience</h1>
       <p>
         <strong id="subj-head">CS61A Academic Intern [06/2018 - present]</strong><br>
-        <em>Structure and Interpretation of Computer Programs (<a href="https://cs61a.org/">CS61A</a>)</em><br>
+        <em>Structure and Interpretation of Computer Programs (<a href="https://cs61a.org/" target="_blank">CS61A</a>)</em><br>
         I help students in their lab sections better understand problem<br> 
         sets, concepts, and how to think like a computer scientist.<br>
         <strong>Skills: teaching, object-oriented programming, Python, Scheme</strong>
       </p>
       <p>
         <strong id="subj-head">Research Assistant [05/2018 - present]</strong><br>
-        <em>Computational Cognitive Neuroscience Lab (<a href="https://ccn.berkeley.edu/">CCN Lab</a>)</em><br>
+        <em>Computational Cognitive Neuroscience Lab (<a href="https://ccn.berkeley.edu/" target="_blank">CCN Lab</a>)</em><br>
         I am a research assistant at the Computational Cognitive<br> 
         Neuroscience (CCN) Lab, which specializes in computational<br> 
         modeling of reinforcement learning and working memory tasks.<br> 
