--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
       <p>
         <a href="https://github.com/indianwolverine/next-song" target="_blank"><strong id="subj-head">Next=>Song</strong></a><br>
         party playlist crowdsourcing in realtime - let the people decide the #nextsong<br>
-        <strong>Skills: CSS Grid, React, Redux, ReduxRouter, axios</strong>
+        <strong>Skills: CSS Grid, React, Redux, dynamic routing</strong>
       </p>
       <p>
         <a href="index.html" target="_blank"><strong id="subj-head">Personal Website</strong></a><br>
